# xplane-tds-vr-overlays

./: .gitignore  CODEX.md  LICENSE  README.md
docs/: acf-placement-tuning.md  aircraft-profiles.md  project-notes.md  roadmap.md  runtime-proxy-export-workflow.md  runtime-tuner-design.md  safe-install-workflow.md
docs/aircraft-notes/: pae-a36-investigation.md
objects/: README.md
objects/f33a/: README.md
plugin/: CMakeLists.txt  README.md
plugin/assets/: .gitignore
plugin/cmake/: XPlaneSdk.cmake
plugin/src/: xpto_menu.cpp  xpto_menu.h  xpto_object_instance.cpp  xpto_object_instance.h  xpto_plugin.cpp  xpto_plugin.h  xpto_window.cpp  xpto_window.h
schemas/: aircraft-profile.schema.json
tests/: test_xpto_acf_placement.py  test_xpto_backups.py  test_xpto_paths.py
tools/: inspect_obj_tris_bounds.py  make_positioning_border_obj.py  validate_obj_library.py  validate_profiles.py  xpto.py
